---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 20/6/25
  Bugfixes:
    - Fixed that items couldn't be ranked up to silver rank.
  Changes:
    - Changed the silver rank bonus description to display the mod setting value.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 16/6/25
  Features:
    - Added two Nauvis quests involving the currently existing hex core modes.
  Bugfixes:
    - Fixed that [item=recycler] had no item value and thus could not be traded anywhere, ranked up, or exchanged at the Quantum Bazaar.
  Gui:
    - Item tooltips in hex core trades, trade overview, and catalog now show the item's partial progress toward bronze rank.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 14/6/25
  Changes:
    - Changed mod description to briefly outline the changes and additions that this mod brings.
    - You can no longer delete the hex core at spawn on any planet, mainly to prevent you from deleting every hex core on a planet accidentally.
  Bugfixes:
    - Fixed that the delete core tool was able to (1) delete cores before hex core deletion was unlocked and (2) delete unclaimed cores.
    - Fixed free hex claim rewards (again).
  Features:
    - Added quest on Fulgora which unlocks resource conversion.
  Minor Features:
    - If you use the delete core tool on hex cores that you cannot afford to delete, it'll notify you.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 9/6/25
  Features:
    - It is now possible to set which qualities a trade can use.
    - Added trade overview filters for maximum number of input and output items in trades.
    - Added trade overview filter for maximum number of trades to be shown.