@@ -402,13 +402,13 @@ quantum-bazaar=Quantum Bazaar
 rank=Rank
 rank-bonus=Rank Bonus
 rank-bonus-none=No bonuses affect this item yet.
-rank-bonus-trade-productivity=All trades with this item gain __1__% productivity.
+rank-bonus-trade-productivity=All trades with this item gain [font=__3__][color=__2__]__1__%[.color][.font] productivity.
 rank-up-instructions-1=__1__ Buy this item at least once.\n__2__ Sell this item at least once.
 rank-up-instructions-2=Sell a rare __1__ at a rare [entity=hex-core,quality=rare] hex core.
-rank-up-instructions-3=Either buy or sell an epic __1__ from an epic [entity=hex-core,quality=epic] hex core on a planet where it is unobtainable from the natural resources.
+rank-up-instructions-3=Either buy or sell an epic __1__ from an epic [entity=hex-core,quality=epic] hex core using an [color=cyan]interplanetary trade[.color].
 rank-up-instructions-4=Lose a space platform that's carrying a hextreme __1__ beyond [space-location=solar-system-edge].
-rank-bonus-unique-2=There is a __1__% chance that a hex core gets an extra trade involving this item.
-rank-bonus-unique-3=This item now shows up in [color=cyan]interplanetary trades[.color] on all planets.
+rank-bonus-unique-2=There is a [font=__3__][color=__2__]__1__%[.color][.font] chance that a hex core gets an extra trade involving this item.
+rank-bonus-unique-3=This item now shows up in [font=__4__][color=__3__]__1__[.color][.font] [color=cyan]interplanetary __plural_for_parameter__1__{1=trade|rest=trades}__[.color] on each of these planets: __2__
 rank-bonus-unique-4=Trades involving this item are no longer lost to hex core deletion and instead relocated to another random hex core.
 rank-bonus-unique-5=This item is now exchangeable at the [font=heading-2][color=180,255,0]Quantum Bazaar[.color][.font].
 open-in-factoriopedia=Open in Factoriopedia.
@@ -445,6 +445,7 @@ max-inputs=Max inputs [font=heading-2](__1__)[.font]
 max-outputs=Max outputs [font=heading-2](__1__)[.font]
 max-trades=Max trades
 all=All
+none-yet-visited=(None yet visited)
 
 [quantum-bazaar]
 sell-in-hand-header=Sell in Hand
